splash 2018 paper as of Apr 16

--- a/doc/report/paper/misc/references.bib
+++ b/doc/report/paper/misc/references.bib
@@ -6,6 +6,86 @@
     volume    = 33,
 }
 
+@book{Langtangen16,
+    title={Finite Difference Computing with PDEs: A Modern Software Approach},
+    author={Langtangen, H.P. and Linge, S.},
+    series={Texts in Computational Science and Engineering},
+    year={2016},
+    publisher={Springer International Publishing}
+}
+
+@misc{Socolofsky05,
+    author       = {Scott A. Socolofsky and Gerhard H. Jirka}, 
+    title        = {Special Topics in
+    Mixing  and  Transport  Processes  in  the
+    Environment, Lecture notes},
+    institution  = {Coastal and Ocean Engineering Division, Texas A{\&}M University},
+    year         = 2005,
+    url          = {https://ceprofs.civil.tamu.edu/ssocolofsky/cven489/Book/Book.htm},
+}
+
+@article{Miyaoka17,
+    title = {A General Boundary Condition with Linear Flux for Advection-Diffusion Models},
+    journal = {TEMA (S\~ao Carlos)},
+    author={Miyaoka, T.Y. and Meyer, J.F.C.A. and Souza, J.M.R.},
+    ISSN = {2179-8451},
+    language = {en},
+    URL = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S2179-84512017000200253&nrm=iso},
+    volume = 18,
+    year = 2017,
+    month = 8,
+    pages = {253-272},
+    publisher = {SciELO},
+}
+
+@book{Sauer11,
+    author = {Sauer, Timothy},
+    title = {Numerical Analysis},
+    year = {2011},
+    edition = {2nd},
+    publisher = {Addison-Wesley Publishing Company},
+    address = {USA},
+}
+
+@book{Butcher03,
+    author = {Butcher, John C.},
+    title = {Numerical Methods for Ordinary Differential Equations},
+    year = {2003},
+    edition = {2nd},
+    publisher = {John Wiley \& Sons},
+    address = {New York},
+}
+
+@inproceedings{Crank47,
+    author = {Crank, John and Nicolson, Phyllis},
+    title = {A practical method for numerical evaluation of solutions of partial differential equations of the heat conduction type},
+    booktitle = {Proceedings of the Cambridge Philosophical Society},
+    volume = {43},
+    year = {1947},
+    pages = {50-64},
+}
+
+@article{Thomas95,
+    title = {Numerical Partial Differential Equations: Finite Difference Methods},
+    journal = {Texts in Applied Mathematics},
+    author={Thomas, J. W.},
+    volume = 22,
+    year = 1995,
+    publisher = {Springer-Verlag},
+    address = {Berlin, New York},
+}
+
+@techreport{Welch06,
+    author       = {Welch, G. and Bishop, G.}, 
+    title        = {An Introduction to the Kalman Filter},
+    institution  = {Department of Computer Science
+    University of North Carolina at Chapel Hill},
+    year         = 2006,
+    number       = {TR 95-041},
+    address      = {Chapel Hill, NC 27599-3175},
+    url          = {https://www.cs.unc.edu/~welch/media/pdf/kalman_intro.pdf}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% Templates %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
