minor changes to Splash paper; corrected subdomain/cell

--- a/doc/report/paper/allscale_splash2018.tex
+++ b/doc/report/paper/allscale_splash2018.tex
@@ -159,7 +159,7 @@
 %% Note: \begin{abstract}...\end{abstract} environment must come
 %% before \maketitle command
 \begin{abstract}
-This paper presents an implementation of a complex PDE based model within a novel programming environment -- AllScale. The AllScale toolchain aims to greatly simplify application development in the ExaScale era by siloing development responsibilities. The front-end API provides the developer with a simple C++ development environment and a suite of parallel constructs that denote tasks to be operated concurrently. Lower level tasks related to the machine and system level are managed by computer scientists at the core-level. We present the development of a data assimilation framework for the simulation of advection-diffusion transports within this API. Mathematical formulations and implementations are presented and we compare parallel constructs with alternative parallel computing approaches such as MPI. The performance of the model from the perspective of both parallel scalability and more importantly ease of development and maintainability are assessed. We demonstrate how the AllScale API can drastically improve developer productivity while maintaining parallel performance. Taking a complex data assimilation model as a use case, we provide a development framework for AllScale API.
+This paper presents an implementation of a complex PDE based model within a novel programming environment -- AllScale. The AllScale toolchain aims to greatly simplify application development in the ExaScale era by siloing development responsibilities. The front-end API provides the developer with a simple C++ development environment and a suite of parallel constructs that denote tasks to be operated concurrently. Lower level tasks related to the machine and system level are managed by computer scientists at the core-level. We present the development of a data assimilation framework for the simulation of advection-diffusion transports within this API. Mathematical formulations and implementations are presented and we compare parallel constructs for with alternative HPC computing approaches such as MPI. The performance of the model from the perspective of both parallel scalability and more importantly ease of development and maintainability are assessed. We demonstrate how the AllScale API can drastically improve developer productivity while maintaining parallel performance. Taking a complex data assimilation model as a use case, we provide a development framework and evaluation test study for the AllScale API.
 \end{abstract}
 
 
@@ -204,20 +204,20 @@ A key challenge facing the feasible merging of mathematical models and data is c
 
 Domain Decomposition (DD) is a standard tool in many scientific domains to reduce the complexity or computational cost of solution. Some of the factors which have motivated DD approaches include: 1) the solution of the subproblems is qualitatively or quantitatively easier than the original, 2) the original problem does not fit into the available memory space and 3) the subproblems can be solved with some concurrency (i.e. in parallel).
 
-This has facilitated many advances in simulation capabilities in the geosciences with most operational large-scale models adopting this paradigm \citep{michalakes2001development, hu2013scalable, hammond2014evaluating}. In this approach, sub-domains are distributed across computational cores and solved independently with a periodic synchronization step to ensure the fidelity of the solution. Synchronization typically occurs at the end of each computational timestep and involves a communication of boundary solution state to neighbour sub-domains with MPI being the most popular protocol for exchanging data and synchronizing solutions. To improve computational performance, fine-grained parallelism is often implemented within sub-domains, via for-example the OpenMP paradigm.
+This has facilitated many advances in simulation capabilities in the geosciences with most operational large-scale models adopting this paradigm \citep{michalakes2001development, hu2013scalable, hammond2014evaluating}. In this approach, subdomains are distributed across computational cores and solved independently with a periodic synchronization step to ensure the fidelity of the solution. Synchronization typically occurs at the end of each computational timestep and involves a communication of boundary solution state to neighbour subdomains with MPI being the most popular protocol for exchanging data and synchronizing solutions. To improve computational performance, fine-grained parallelism is often implemented within subdomains, via for-example the OpenMP paradigm.
 
 Synchronization requirements and multiple parallelisation schemas enforced by performance considerations means that the development of efficient code places very high skill demands on the application developer, encompassing knowledge of sophisticated domain related algorithmic formulation and solvers together with complex software engineering skills. This is accentuated as degree of parallelism becomes larger and codes are deployed on hundreds of thousands to millions of computational cores. Indeed, recent efforts have addressed this such as the LFric research project from the UK Met Office that aims to develop a replacement for the Met Office Unified Model in order to meet the challenges which will be presented by the next generation of exascale supercomputers \citep{melvin2017lfric}. Design of the model revolves around a principle of a 'separation of concerns', whereby the natural science aspects of the code can be developed without worrying about the underlying architecture, while machine dependent optimisations can be carried out at a high level.
 
-In this paper we present the paralellisation of a DA scheme for advection-diffusion flows using a novel toolchain that empowers effective development of highly scalable parallel applications. The design of the tool chain, named the AllScale tool chain, is based on 3 key principles
+In this paper we present the paralellisation of a DA scheme for advection-diffusion flows using a novel toolchain that empowers effective development of highly scalable parallel applications. The design of the ExaScale development environment, named the AllScale tool chain, is based on 3 key principles
 \begin{enumerate}
 \item Enabling the separation of responsibilities in the development of HPC applications,
 \item Utilizing industry standard programming languages and preserving compatibility to existing development and debugging tools, as well as,
 \item Employing advanced programming language, compilation and runtime system technology to transparently integrate sophisticated services into parallel applications.
 \end{enumerate} 
-From the application developer perspective, it promises highly increased development productivity by hiding all parallel constructs from the application developer and providing a development API equivalent to developing serial applications.
+From the application developer perspective, it promises highly increased development productivity by hiding all parallel constructs from the application developer and providing a development API reminiscent of developing serial applications.
 
-We leverage the AllScale API and toolchain to develop a highly scalable code for the simulation of marine oil spills that combines an advection diffusion model with data assimilation algorithms. The approach combines DA with domain decomposition (DD) to 1) reduce the computational expense of DA and 2) facilitate nested recursive parallelism together with DA by localising to individual sub-domains. 
-In this study, the global domain is split into sub-domains and the equations are discretised on each sub-domain. Interface boundary conditions are enforced using a ghost cell approach that overlaps neighbouring solutions. The data assimilation algorithm aligns with the data decomposition strategy by adopting a set of localised data filters unique to each subdomain. The solution is implemented using the novel AllScale API (based on C++ template-style programming) that manages distribution across cores, load balancing and synchronization of solution between sub-domains. 
+We leverage the AllScale API and toolchain to develop a highly scalable code for the simulation of marine oil spills that combines an advection diffusion model with data assimilation algorithms. The approach combines DA with domain decomposition (DD) to 1) reduce the computational expense of DA and 2) facilitate nested recursive parallelism together with DA by localising to individual subdomains. 
+In this study, the global domain is split into subdomains and the equations are discretised on each subdomain. Interface boundary conditions are enforced using a ghost cell approach that overlaps neighbouring solutions. The data assimilation algorithm aligns with the data decomposition strategy by adopting a set of localised data filters unique to each subdomain. The solution is implemented using the novel AllScale API (based on C++ template-style programming) that manages distribution across cores, load balancing and synchronization of solution between subdomains. 
 
 In the remainder of this paper, the API is introduced, the mathematical problem and algorithms are outlined, the development of the application within the API is detailed and compared with an MPI implementation and performance results are presented. Finally, we draw conclusions from the study and present the future research steps.
 
@@ -248,7 +248,7 @@ providing efficient parallel codes is distributed among three contributors:
 \item \textit{the system level expert} focusing on providing the most flexible and portable implementation of the Core API, thereby handling load management, scheduling, resilience, and hardware management obligations
 \end{itemize}
 
-The separation of responsibilities also effects the code base. By shielding the
+The separation of responsibilities also affects the code base. By shielding the
 domain expert from all the underlying details (synchronization, communication,
 cache efficiency, scheduling, utilization of low-level parallel APIs ...), the
 resulting application code remains free of the otherwise necessary management
@@ -339,13 +339,13 @@ Applying the problem to the marine environment (as an example) and assuming that
 
 \begin{figure}
 \includegraphics[scale=0.5]{images/sensors-Nx208-Ny176}
-\caption{Example of domain decomposition into ${16{\times}16}$ cells. Blue points depict location of sensors pseudo-randomly scattered across the domain. Coordinates are defined as indices of nodal points.}
+\caption{Example of domain decomposition into ${16{\times}16}$ subdomains. Blue points depict location of sensors pseudo-randomly scattered across the domain. Coordinates are defined as indices of nodal points.}
 \label{fig:sensors}
 \end{figure}
 
 Since our main objective is to evaluate the capabilities of the Allscale API in real-world applications, the \textit{observation data} will be artificially generated for simplicity. The advantage of having the freedom to generate ``ground-truth'' is that sparsity can be controlled and it can be used to assess the accuracy of the data assimilation solution.  At every time step we extract and record the values of the ground-truth density field $u_{gt}(x,y,t)$ at few sensor locations: $z_s(t)$ = $u_{gt}(x_s,y_s,t)$, $\,\,s \in [1\,{\ldots}\,N_{sensors}]$. The entities $\{z_s(t)\}$ are called \textit{observations} and this is the only information available to the data assimilation method about ``true state of nature''. The sensors themselves are pseudo-randomly scattered across the domain, Fig.~\ref{fig:sensors}, where the term ``pseudo-randomly'' means that unrealistic ``clustering'' of sensors is avoided. 
 
-The solution propagates forward in time over the period $[0 \ldots T]$ starting from zero density $u(x,y,t)\rvert_{t=0} = 0$. The data assimilation method then nudges towards the actual density as observed by sensors. We employ Kalman filter (line~\ref{alg:line-kalman}) that brings otherwise simulated density closer to observation (if there is a sensor in the cell), and this important driving force is responsible for convergence of estimated density field towards the true state. In the absence of observations in a cell, the conventional integration step is fulfilled (line~\ref{alg:line-conven}).  Algorithm~\ref{alg:toplevel} summarizes the major steps in the data assimilation method.
+The solution propagates forward in time over the period $[0 \ldots T]$ starting from zero density $u(x,y,t)\rvert_{t=0} = 0$. The data assimilation method then nudges towards the actual density as observed by sensors. We employ Kalman filter (line~\ref{alg:line-kalman}) that brings otherwise simulated density closer to observation (if there is a sensor in the subdomain), and this important driving force is responsible for convergence of estimated density field towards the true state. In the absence of observations in a subdomain, the conventional integration step is fulfilled (line~\ref{alg:line-conven}).  Algorithm~\ref{alg:toplevel} summarizes the major steps in the data assimilation method.
 
 One of the key challenges of the Kalman filter is that is is computationally extremely demanding  \cite{verhaegen1986numerical}, therefore  making it computationally disadvantageous for large scale systems like the one investigated here.
 In this work, this issue is resolved by introducing interconnected localised Kalman filters. Specifically, the computational domain of the problem is geometrically decomposed into smaller subdomains. Then the underlying PDE and observation equation are restricted to the introduced subdomains by means of a suitable Domain Decomposition (DD) technique to maintain the continuity of the solutions across the interfaces between the subdomains. These local filters are interconnected by means of DD information exchange mechanisms (they exchange data with each other through boundary conditions). The fully discrete interconnected localised filters are then iterated in order to generate both estimates of the solution of the original PDE.
@@ -387,7 +387,7 @@ In this work, this issue is resolved by introducing interconnected localised Kal
 \end{algorithmic}
 \end{algorithm}
 
-To improve the precision of the data assimilation framework and allow for more accurate specification of sensor location, subdomains are processed at different resolution using the \textit{multi-scaling} capability of Allscale API. Namely, the cells with observations are processed at fine resolution because this yields better Kalman filtering estimation. On the other hand, cells without observations (where we just integrate the governing equation) are processed at coarser resolution with less computational cost. 
+To improve the precision of the data assimilation framework and allow for more accurate specification of sensor location, subdomains are processed at different resolution using the \textit{multi-scaling} capability of Allscale API. Namely, the subdomains with observations are processed at fine resolution because this yields better Kalman filtering estimation. On the other hand, domains without observations (where we just integrate the governing equation) are processed at coarser resolution with less computational cost. 
 
 There are actually more technical details then presented in Algorithm~\ref{alg:toplevel}. For example, each iteration is sub-divided into few relaxation steps aiming to improve accuracy of Kalman filtering. Also, the exact application of multi-scaling mechanism is a little bit more involved. All these details will be publically available at some stage along with the source code. 
 
@@ -413,13 +413,13 @@ Information external to the computational domain are specified by boundary condi
 
 \subsection{Domain decomposition}
 
-Allscale API offers two layers of domains discretization. At the top level, the whole domain is represented as a rectangular \textit{grid of subdomains}, and the number of subdomains is not limited in either dimension. Each subdomain is implemented as a \textit{grid of nodal cells}. The size of a cell must be fixed because it is defined by template parameters in corresponding \texttt{C++} class and should be available at compile time.
+Allscale API offers two layers of domains discretization. At the top level, the whole domain is represented as a rectangular \textit{grid of subdomains}, and the number of subdomains is not limited in either dimension. Each subdomain is implemented as a \textit{grid of nodal cells}. The size of a subdomain must be fixed because it is defined by template parameters in corresponding \texttt{C++} class and should be available at compile time.
 
-At the run time, each subdomain is assigned to so called \textit{worker} --- either an execution thread or a process in case of distributed application. The assignment and workload balancing is done automatically once the grid of cells had been exposed to \textit{parallel for} (\texttt{pfor}) or \texttt{stencil} operator. A portion of subdomain layout is exemplified on Fig.~\ref{fig:cell}. As it was already mentioned, computation over subdomain is conducted independently of other subdomains with no-race-condition guarantee when border points of four immediate neighbour subdomains are being read (green point on Fig.~\ref{fig:cell}). In order to yield a seamless solution we operate over \textit{extended subdomain} that comprises border points of the neighbour subdomains. Extended subdomain is depicted by dotted rectangle on Fig.~\ref{fig:cell}. 
+At the run time, each subdomain is assigned to so called \textit{worker} --- either an execution thread or a process in case of distributed application. The assignment and workload balancing is done automatically once the grid of subdomains have been exposed to \textit{parallel for} (\texttt{pfor}) or \texttt{stencil} operator. A portion of subdomain layout is exemplified on Fig.~\ref{fig:cell}. As it was already mentioned, computation over subdomain is conducted independently of other subdomains with no-race-condition guarantee when border points of four immediate neighbour subdomains are being read (green point on Fig.~\ref{fig:cell}). In order to yield a seamless solution we operate over \textit{extended subdomain} that comprises border points of the neighbour subdomains. Extended subdomain is depicted by dotted rectangle on Fig.~\ref{fig:cell}. 
 
 \begin{figure}[!htb]
 \includegraphics[scale=0.33]{images/subdomain}
-\caption{Example of a grid subdomain, constituted by the blue nodal points, and corresponding extended one, outlined by dotted rectangle. Border (green) points of four immediate peer cells (\textit{Left}, \textit{Right}, \textit{Up}, \textit{Down}) are available for exchange.}
+\caption{Example of a grid subdomain, constituted by the blue nodal points, and corresponding extended one, outlined by dotted rectangle. Border (green) points of four immediate neighbour subdomains (\textit{Left}, \textit{Right}, \textit{Up}, \textit{Down}) are available for exchange.}
 \label{fig:cell}
 \end{figure}
 
@@ -444,7 +444,7 @@ D \left(
 \end{aligned}
 \label{eq:discrete-pde}
 \end{equation}
-where the discrete indices $(i,j)$ run over an extended cell, $\Delta{t}$ and $\Delta{x}$, $\Delta{y}$ are the time and space discretization steps respectively.
+where the discrete indices $(i,j)$ run over an extended subdomain, $\Delta{t}$ and $\Delta{x}$, $\Delta{y}$ are the time and space discretization steps respectively.
 
 Flattening 2D arrays $\myu{i}{j}{t}$ and $\myu{i}{j}{t+1}$ into the vectors ${\bf u}_{t}$ and ${\bf u}_{t+1}$ respectively, and collecting other terms into a \textit{sparse} matrix ${\bf B}_t$ the last equation can be rewritten as follows:
 \begin{equation}
@@ -452,9 +452,9 @@ Flattening 2D arrays $\myu{i}{j}{t}$ and $\myu{i}{j}{t+1}$ into the vectors ${\b
 {\bf u}_{t+1} = {\bf B}^{-1}_t {\bf u}_{t} = {\bf A}_t {\bf u}_{t},
 \label{eq:state-propag}
 \end{equation}
-where ${\bf A}_t = {\bf B}^{-1}_t$ is the \textit{state propagation matrix}. If $(S_x,S_y)$ is the cell size and $(S_x\!+\!2,S_y\!+\!2)$ is the size of extended cell respectively, then the sparse $((S_x\!+\!2)\!\cdot\!(S_y\!+\!2))\,\,{\times}\,\,((S_x\!+\!2)\!\cdot\!(S_y\!+\!2))$ matrix ${\bf B}$ has $O((S_x\!+\!2)\!\cdot\!(S_y\!+\!2))$ non-zero elements. Considering relatively small cell size, the linear system ${\bf u}_{t} = {\bf B}_t {\bf u}_{t+1}$ can solved quite efficiently with respect to unknown ${\bf u}_{t+1}$.
+where ${\bf A}_t = {\bf B}^{-1}_t$ is the \textit{state propagation matrix}. If $(S_x,S_y)$ is the subdomain size and $(S_x\!+\!2,S_y\!+\!2)$ is the size of extended subdomain respectively, then the sparse $((S_x\!+\!2)\!\cdot\!(S_y\!+\!2))\,\,{\times}\,\,((S_x\!+\!2)\!\cdot\!(S_y\!+\!2))$ matrix ${\bf B}$ has $O((S_x\!+\!2)\!\cdot\!(S_y\!+\!2))$ non-zero elements. Considering relatively small subdomain size, the linear system ${\bf u}_{t} = {\bf B}_t {\bf u}_{t+1}$ can solved quite efficiently with respect to unknown ${\bf u}_{t+1}$.
 
-The important trait of the matrix ${\bf B}_t$ is how the extra points of extended cell are handled. The operator ${\bf B}_t$ acts according to discretization in (\ref{eq:discrete-pde}) on the regular cell points and passes the values at outer points of extended cell without change: $\myu{i}{j}{t} = \myu{i}{j}{t+1}$. This mechanism does not affect the finite difference scheme at all, but simplifies software implementation.
+The important trait of the matrix ${\bf B}_t$ is how the extra points of extended subdomain are handled. The operator ${\bf B}_t$ acts according to discretization in (\ref{eq:discrete-pde}) on the regular subdomain points and passes the values at outer points of extended subdomain without change: $\myu{i}{j}{t} = \myu{i}{j}{t+1}$. This mechanism does not affect the finite difference scheme at all, but simplifies software implementation.
 %%%%%
 \renewcommand{\myu}{}
 %%%%%
@@ -529,7 +529,7 @@ stencil(state_field, T,
 });
 \end{lstlisting}
 
-Exchange of boundary information to maintain solution fidelity is central to DD approaches. Within the AllScale API, synchronisation aspects are managed at the core API level facilitating trivial implementation of boundary exchange operations. Listing \ref{boundAllScale} outlines how we code boundary exchanges. Neighbouring domains are identified via Boolean data types (if they exist). On each of the four boundaries, the overlapping local boundary are replaced by the computed values from the neighbouring, remote boundary. All additional synchronization considerations such as send/receive orderings, computational overlapping, etc. are managed at the level of the core API, hidden from the application developer. Further, despite the stencil implementation providing a complete space-time decomposition, the API ensures that data from the appropriate time level are communicated. 
+Exchange of boundary information to maintain solution fidelity is central to DD approaches. Within the AllScale API, synchronisation aspects are managed at the core API level facilitating trivial implementation of boundary exchange operations. Listing \ref{boundAllScale} outlines how we code boundary exchanges. Neighbouring domains (if they exist) are identified via Boolean data types. On each of the four boundaries, the overlapping local boundary are replaced by the computed values from the neighbouring, remote boundary. All additional synchronization considerations such as send/receive orderings, computational overlapping, etc. are managed at the level of the core API, hidden from the application developer. Further, despite the stencil implementation providing a complete space-time decomposition, the API ensures that data from the appropriate time level are communicated. 
 
 \begin{lstlisting}[caption=AllScale boundary exchange implementation, label=boundAllScale]
 // for each subdomain update boundaries in each direction
